--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -16,6 +16,7 @@
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorHealth')">Receptor Health</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')">Receptor Status</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorPointing')">Receptor Pointing</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')">User Administration</md-button>
