--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -12,59 +12,6 @@
             </md-button>
         </md-toolbar>
         <div flex class="md-whiteframe-z1" style="padding: 16px;">
-            <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row"
-                 ng-init="transparentLegend = true"
-                 ng-class="{'transparent-legend':transparentLegend && !showLegend}">
-                <md-button flex style="pointer-events: auto; width: 36px; height: 40px;"
-                           md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false"
-                           ng-click="showLegend = !showLegend"
-                           ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
-                           class="md-primary md-raised md-icon-button">
-                    <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye"
-                             title="Show Legend"></md-icon>
-                    <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash"
-                             title="Hide Legend"></md-icon>
-                </md-button>
-                <div class="md-whiteframe-z3" layout="column" ng-show="showLegend"
-                     style="background: white; padding: 8px;">
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch nominal-child" title="Green"></div>
-                        <span>Health - OK</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch unknown-child" title="Grey"></div>
-                        <span>Mode - Stop</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch warn-child" title="Amber"></div>
-                        <span>Mode - Inhibited</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch stow-item" title="Blue"></div>
-                        <span>Mode - Stow</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch in-assigned-subarray-item" title="Light Green"></div>
-                        <span>Assigned</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch in-allocated-subarray-item" title="Light Blue"></div>
-                        <span>Allocated</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch in-maintenance-item" title="Purple"></div>
-                        <span>In Maintenance</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch error-item" title="Red"></div>
-                        <span>In Error</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch amber-item" title="Amber"></div>
-                        <span>Sub-Array Active</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch in-maintenance-item" title="Purple"></div>
-                        <span>Sub-Array In Maintenance</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div class="color-patch nominal-item" title="Green"></div>
-                        <span>Sub-Array Inactive</span></div>
-                    <div layout="row" layout-align="start center">
-                        <div style="border: 1px solid #d3d3d3" class="color-patch" title="White"></div>
-                        <span>Nothing to Report</span></div>
-                </div>
-            </div>
 
             <div layout="column" layout-align="start" ng-show="!vm.sortBySubarrays">
                 <div class="md-whiteframe-z1">
@@ -113,9 +60,7 @@
                                  class="receptor-status-column-heading"
                                  layout="column" layout-align="center center"
                                  ng-class="{'in-maintenance-item':receptor.in_maintenance && !(receptor.assignedSubarray || receptor.allocatedSubarray), 'in-assigned-subarray-item': receptor.assignedSubarray, 'in-allocated-subarray-item': receptor.allocatedSubarray}">
-                                <!--leave vm.getReceptorSubarray(receptor) in there so that it gets called with every digest-->
-                                <span ng-show="false">{{vm.getReceptorSubarray(receptor)}}</span>
-                                <span ng-show="receptor.subarray" title="{{'Sub-Array ' + receptor.subarray}}">S-A {{receptor.subarray}}</span>
+                                <span ng-show="receptor.subarray" title="{{'Sub-Array ' + receptor.subarray}}">SA {{receptor.subarray}}</span>
                                 <span ng-show="!receptor.subarray">Free</span>
                             </div>
                         </div>
@@ -133,8 +78,9 @@
                         layout="row" layout-align="center center"
                         style="max-height: 50px; min-height: 50px;">
                         <div flex style="position: relative">
-                            <span style="position: absolute; left: 8px; top: 8px;">SUB-ARRAY {{subarray.id}}</span>
-                            <md-button layout="row" style="min-height: 42px; width: calc(100% - 16px)"
+                            <span ng-show="subarray.id === 'free'" style="position: absolute; left: 8px; top: -20px;">FREE</span>
+                            <span ng-show="subarray.id !== 'free'" style="position: absolute; left: 8px; top: 8px;">SUB-ARRAY {{subarray.id}}</span>
+                            <md-button ng-show="subarray.id !== 'free'" layout="row" style="min-height: 42px; width: calc(100% - 16px)"
                                        class="unselectable"
                                        ng-click="vm.navigateToSchedulerDetails(subarray.id)"
                                        title="Click to Manage Observations for Sub-Array {{subarray.id}}">
@@ -142,8 +88,6 @@
                                 <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                             </md-button>
                         </div>
-
-                        <span ng-show="subarray.state === 'active'" style="width: 36px;"></span>
                     </md-toolbar>
 
                     <div flex style="overflow: auto;" ng-class="{'maintenance-bg':subarray.in_maintenance}">
@@ -188,6 +132,59 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row"
+             ng-init="transparentLegend = true"
+             ng-class="{'transparent-legend':transparentLegend && !showLegend}">
+            <md-button flex style="pointer-events: auto; z-index: 100"
+                       md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false"
+                       ng-click="showLegend = !showLegend"
+                       ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
+                       class="md-primary md-raised md-icon-button">
+                <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye"
+                         title="Show Legend"></md-icon>
+                <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash"
+                         title="Hide Legend"></md-icon>
+            </md-button>
+            <div class="md-whiteframe-z3" layout="column" ng-show="showLegend"
+                 style="background: white; padding: 8px;">
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch nominal-child" title="Green"></div>
+                    <span>Health - OK</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch unknown-child" title="Grey"></div>
+                    <span>Mode - Stop</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch warn-child" title="Amber"></div>
+                    <span>Mode - Inhibited</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch stow-item" title="Blue"></div>
+                    <span>Mode - Stow</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch in-assigned-subarray-item" title="Light Green"></div>
+                    <span>Assigned</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch in-allocated-subarray-item" title="Light Blue"></div>
+                    <span>Allocated</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch in-maintenance-item" title="Purple"></div>
+                    <span>In Maintenance</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch error-item" title="Red"></div>
+                    <span>In Error</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch amber-item" title="Amber"></div>
+                    <span>Sub-Array Active</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch in-maintenance-item" title="Purple"></div>
+                    <span>Sub-Array In Maintenance</span></div>
+                <div layout="row" layout-align="start center">
+                    <div class="color-patch nominal-item" title="Green"></div>
+                    <span>Sub-Array Inactive</span></div>
+                <div layout="row" layout-align="start center">
+                    <div style="border: 1px solid #d3d3d3" class="color-patch" title="White"></div>
+                    <span>Nothing to Report</span></div>
             </div>
         </div>
     </div>
