added main display navigation button for central logger

--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -19,6 +19,7 @@
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorPointing')">Receptor Pointing</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
+        <md-button class="md-raised md-primary" ng-click="vm.openCentralLogger()">Central Logger</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')">User Administration</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')">KATGUI Configuration</md-button>
     </div>
