--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -20,13 +20,21 @@
     </div>
 
     <div layout="column" style="margin: 8px; min-width: 366px;"
-         ng-click="vm.showDatePicker = false;vm.showEndDatePicker = false; vm.showSensorGraphOptionsMenu = false;vm.showSensorGraphSelectionsMenu = false;">
+         ng-click="vm.showDatePicker = false;vm.showEndDatePicker = false;">
         <md-toolbar layout="row" class="md-whiteframe-z1 md-toolbar-tools-medium">
             <span flex>Sensor Graph Tools</span>
-            <md-button class="md-icon-button inline-action-button" style="margin: 0"
-                       ng-click="vm.showSensorGraphSelectionsMenu = !vm.showSensorGraphSelectionsMenu;$event.stopPropagation()">
-                <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
-            </md-button>
+            <md-menu md-theme="{{themePrimaryButtons}}" style="padding: 0">
+                <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()" style="margin:0">
+                    <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+                </md-button>
+                <md-menu-content width="4" style="padding-left: 16px;">
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.showRelativeTime" ng-click="">
+                            Show Relative Date-Time Picker
+                        </md-checkbox>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
         </md-toolbar>
         <div flex class="md-whiteframe-z1" layout="column" layout-align="start center"
              md-theme="{{themePrimaryButtons}}">
@@ -150,8 +158,7 @@
         </div>
     </div>
 
-    <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px; width:100%"
-         ng-click="vm.showSensorGraphOptionsMenu = false;vm.showSensorGraphSelectionsMenu = false;">
+    <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px; width:100%">
         <md-toolbar layout="row" layout-align="end center" class="md-whiteframe-z1 ">
             <div flex layout="row" layout-align="center center" md-theme="{{themePrimaryButtons}}"
                  class="md-toolbar-tools-medium">
@@ -168,8 +175,7 @@
                 </md-chips>
             </div>
         </md-toolbar>
-        <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart"
-                          clear-function="vm.clearChart" ng-class="{'dot-hide':!vm.showDots}"
+        <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart" clear-function="vm.clearChart"
                           remove-sensor-function="vm.removeSensorLine" y-max="vm.yAxisMaxValue"
                           y-min="vm.yAxisMinValue"></multi-line-chart>
         <div layout="row" class="floating-chart-actions">
@@ -181,60 +187,61 @@
                        ng-click="vm.clearData()" title="Clear Data">
                 <md-icon class="fa" md-font-icon="fa-remove"></md-icon>
             </md-button>
-            <md-button class="md-icon-button" title="Sensor Graph Actions"
-                       ng-click="vm.showSensorGraphOptionsMenu = !vm.showSensorGraphOptionsMenu;$event.stopPropagation()">
-                <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
-            </md-button>
+            <md-menu md-theme="{{themePrimaryButtons}}" style="padding: 0">
+                <md-button class="md-icon-button" ng-click="$mdOpenMenu()">
+                    <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+                </md-button>
+                <md-menu-content width="4" style="padding-left: 16px;">
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showOptionsChanged()"
+                                     ng-click="$event.stopPropagation()">
+                            Show Grid Lines
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.showDots" ng-change="vm.showOptionsChanged()"
+                                     ng-click="$event.stopPropagation()">
+                            Show Data Dots
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.showContextZoom"
+                                     ng-change="vm.showOptionsChanged()" ng-click="$event.stopPropagation()">
+                            Show Context Zoom
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.useFixedYAxis" ng-change="vm.showOptionsChanged()"
+                                     ng-click="$event.stopPropagation()">
+                            Use Fixed Y Axis Values
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item ng-if="vm.useFixedYAxis">
+                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
+                             style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                            <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                                class="md-primary" title="Set the desired Y-Axis Minimum Value">
+                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
+                                       ng-change="vm.showOptionsChanged()" type="number"
+                                       ng-model-options="{ debounce: 300 }">
+                            </md-input-container>
+                        </div>
+                    </md-menu-item>
+                    <md-menu-item ng-if="vm.useFixedYAxis">
+                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
+                             style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                            <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                                class="md-primary" title="Set the desired Y-Axis Maximum Value">
+                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
+                                       ng-change="vm.showOptionsChanged()" type="number"
+                                       ng-model-options="{ debounce: 300 }">
+                            </md-input-container>
+                        </div>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
         </div>
-
-    </div>
-
-    <div ng-init="vm.showSensorGraphOptionsMenu = false" ng-show="vm.showSensorGraphOptionsMenu"
-         class="sensor-graph-options-menu md-whiteframe-z3">
-        <md-list layout="column" md-theme="{{themePrimaryButtons}}">
-            <md-item>
-                <md-checkbox class="md-primary" ng-model="vm.showDots" ng-change="vm.showOptionsChanged()">
-                    Show Data Dots
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showOptionsChanged()">
-                    Show Grid Lines
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.showContextZoom" ng-change="vm.showOptionsChanged()">
-                    Show Context Zoom
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.useFixedYAxis" ng-change="vm.showOptionsChanged()">
-                    Use Fixed Y Axis Values
-                </md-checkbox>
-                <div ng-show="vm.useFixedYAxis" layout="row" layout-align="start center"
-                     style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
-                    <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
-                    <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
-                                        class="md-primary" title="Set the desired Y-Axis Minimum Value">
-                        <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
-                               ng-change="vm.showOptionsChanged()" type="number" ng-model-options="{ debounce: 300 }">
-                    </md-input-container>
-                </div>
-                <div ng-show="vm.useFixedYAxis" layout="row" layout-align="start center"
-                     style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
-                    <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
-                    <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
-                                        class="md-primary" title="Set the desired Y-Axis Maximum Value">
-                        <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
-                               ng-change="vm.showOptionsChanged()" type="number" ng-model-options="{ debounce: 300 }">
-                    </md-input-container>
-                </div>
-            </md-item>
-        </md-list>
-    </div>
-
-    <div ng-init="vm.showSensorGraphSelectionsMenu = false" ng-show="vm.showSensorGraphSelectionsMenu"
-         class="sensor-graph-selection-options-menu md-whiteframe-z3">
-        <md-list layout="column" md-theme="{{themePrimaryButtons}}">
-            <md-item>
-                <md-checkbox class="md-primary" ng-model="vm.showRelativeTime">
-                    Show Relative Date-Time Picker
-                </md-checkbox>
-            </md-item>
-        </md-list>
     </div>
 </div>
